# Dijkstra_map_for_Godot-1

./: .gut_editor_config.json  Cargo.toml  README.md  dijkstra map for godot.csproj  project.godot
.github/workflows/: make_release.yml
addons/dijkstra-map/: DijkstraMap.gdextension  DijkstraMap.gdextension.uid
addons/gut/: GutScene.gd.uid  GutScene.tscn  UserFileViewer.gd.uid  UserFileViewer.tscn  autofree.gd.uid  awaiter.gd.uid  collected_script.gd.uid  collected_test.gd.uid  comparator.gd.uid  compare_result.gd.uid  diff_formatter.gd.uid  diff_tool.gd.uid  double_tools.gd.uid  doubler.gd.uid  gut.gd.uid  gut_cmdln.gd.uid  gut_config.gd.uid  gut_plugin.gd.uid  gut_to_move.gd.uid  hook_script.gd.uid  inner_class_registry.gd.uid  input_factory.gd.uid  input_sender.gd.uid  junit_xml_export.gd.uid  logger.gd.uid  method_maker.gd.uid  one_to_many.gd.uid  optparse.gd.uid  orphan_counter.gd.uid  parameter_factory.gd.uid  parameter_handler.gd.uid  printers.gd.uid  result_exporter.gd.uid  script_parser.gd.uid  signal_watcher.gd.uid  spy.gd.uid  strutils.gd.uid  stub_params.gd.uid  stubber.gd.uid  summary.gd.uid  (+4 more)
dijkstra-map-gd/: Cargo.toml
dijkstra-map-gd/src/: lib.rs
project_examples/assets/: tileset.tres
project_examples/astar_maze_comparison/: astar_maze_comparison.gd  astar_maze_comparison.gd.uid  astar_maze_comparison.tscn
project_examples/main/: main.gd  main.gd.uid  main.tscn  main_tilemap.gdshader.uid
project_examples/shared_movement_example/: archer.gd  archer.gd.uid  archer.tscn  dragon.gd  dragon.gd.uid  (+6 more)
tests/: gut.tscn
tools/: build_platform.sh
(+42 files in other folders)
