[package]
name = "dijkstra_map_gd"
version = "0.1.0"
authors = ["Astrale", "Matej Sloboda"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
fnv = "1.0.7"
dijkstra_map = { path = "../dijkstra-map" }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-wasm", "lazy-function-tables"]

[features]
nothreads = ["godot/experimental-wasm-nothreads"]

[build-dependencies]
gdnative-doc = "0.0.6"
